# endlessworld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO.txt  build.sh  main.cpp  rebuild.sh
apps/: 6.1.coordinate_systems.cpp  CMakeLists.txt  app.cpp  camera.cpp  demo.cpp  hello-triangle.cpp  lighting.cpp  model_loading.cpp  shader.cpp  texture-demo.cpp  transformation.cpp
include/glad/: glad.h
include/immersion/: assets.hpp  render.hpp
include/insight/: README.md  assets.hpp  geometry.h  gltoy.h  gui.hpp  input.hpp  mesh.h  model.h  render.hpp  scene.h  shader.h
include/learnopengl/: mesh.h  model.h
legacy/osx/endlessworld.xcodeproj/: project.pbxproj
legacy/osx/endlessworld.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
legacy/src/: main.cc
legacy/src/alpha/: ltexture.cc  ltexture.h
legacy/src/alpha/engine/: game_window.h
legacy/src/alpha/game/: asset_manager.cc  asset_manager.h  game.h  game_commons.h
legacy/src/commons/: doom_random.c  sdl2utils.c  sdl2utils.h
legacy/src/ecs/: config.h  ecs.h  event_bus.h  event_emitter.h
legacy/src/ew/: ew.h  factory.h  gwindow.h  renderer.h  sdl_renderer.h  world_map.h
legacy/src/ew/components/: items.h
legacy/src/ew/events/: eventbus.h  events.h
legacy/src/ew/systems/: graphics.h  hpbar.h  input.h  physics.h
osx/endlessworld.xcodeproj/: project.pbxproj
osx/endlessworld.xcodeproj/project.xcworkspace/xcshareddata/: endlessworld.xcscmblueprint
shaders/: 1.model_loading.fs  1.model_loading.vs  basic_lighting.fs  basic_lighting.vs
src/: CMakeLists.txt  cutils.c  cutils.h  engine.c  engine.h  engine_base.h  game_res.c  game_res.h  lib.cpp  main.c  main.cc  main.cpp  scean.c  scean.h  tiledmap.c  tiledmap.h
src/alpha/: gameobject.c  gameobject.h
src/alpha/engine/: element.h  game_window.h
src/alpha/game/: game_commons.cc  game_object.cc  game_object.h
src/commons/: cutils.h  doom_random.h  sdl2utils.h  well512_random.c  well512_random.h
src/ecs/: ecs.h
src/engine/: engine.c  engine.h  game_loop.cc  game_res.c  graphic_interfaces.h  renderer.h
src/ew/: config.h  ew.h  factory.h  gwindow.h  map_render.h  renderer.h  sdl_renderer.h  world_map.h
src/ew/commands/: actions.h
src/ew/components/: combat.h  components.h  sprite.h
src/ew/systems/: combat.h  graphics.h  hpbar.h  input.h  physics.h
src/ew/tables/: items.h
src/game/: game.h  game_loop.cc  game_object.cc  game_object.h  game_scean.cc  game_scean.h  gameutils.cc  gameutils.h  hud.cc  hud.h  map_render.h  tiledmap.cc  tiledmap.h  world.cc  world.h  world_map.cc  world_map.h
tests/: CMakeLists.txt  testlib.cpp
